--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>音频</title>
-</head>
-
-<body>
+    <title>jQuery.AudioPlayer.js</title>
     <style type="text/css">
         li a {
             line-height: 2;
@@ -19,6 +16,10 @@
             background-color: #dcdcdc;
         }
     </style>
+</head>
+
+<body>
+    <h2>jQuery.AudioPlayer.js Demo</h2>
     <p>音频文件来着豆瓣，如有侵权联系我，会尽快删除</p>
     <ul>
         <li><a href="javascript:;" data-url="http://mr3.doubanio.com/70d0968fb8312ade3f04c7e1d1d18d1f/1/fm/song/p1817677_128k.mp4">玩具</a></li>
@@ -34,6 +35,7 @@
     <!-- jQuery.AudioPlayer.js -->
     <link rel="stylesheet" href="../src/theme.default.css">
     <script type="text/javascript" src="../src/jQuery.AudioPlayer.js"></script>
+
     <script type="text/javascript">
     $(function() {
         var player = $.AudioPlayer;
