--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- jQuery.AudioPlayer.js -->
-    <link rel="stylesheet" href="../src/theme.default.css">
+    <link rel="stylesheet" href="../src/jQuery.AudioPlayer.min.css">
     <script type="text/javascript" src="../src/jQuery.AudioPlayer.js"></script>
 
     <script type="text/javascript">
